Add readme, license, gitignore

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>Michae2 Source</title>
   </head>
   <body>
-  <h1>Hello World!</h1>
-  <p>Hello!</p>
+    <h1>Michae2 Source</h1>
+    <p><a href="https://github.com/michae2">github.com/michae2</a></p>
   </body>
 </html>
